--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,19 +24,19 @@
     <div class="container">
       <div class="row justify-content-center text-center">
         <div class="col-lg-5">
-          <h2 class="h4">Update content</h2>
+          <h2 class="h4">Understand the usage of the service</h2>
           <p>Edit <code>content/_index.md</code> to see this page change.</p>
         </div>
         <div class="col-lg-5">
-          <h2 class="h4">Add new content</h2>
+          <h2 class="h4">Add new properties or promotions</h2>
           <p>Add Markdown files to <code>content</code> to create new pages.</p>
         </div>
         <div class="col-lg-5">
-          <h2 class="h4">Configure your site</h2>
+          <h2 class="h4">Configure your mini program</h2>
           <p>Edit your config in <code>config/_default/hyas/doks.toml</code>.</p>
         </div>
         <div class="col-lg-5">
-          <h2 class="h4">Read the docs</h2>
+          <h2 class="h4">Understand WeChat Ecosystem</h2>
           <p>Learn more in the <a href="https://getdoks.org/">Docs</a>.</p>
         </div>
       </div>
